force-app/main/default/objects/Intake__c/Intake__c.object-meta.xml
<CustomObject>
    <description>For the purpose of the PMHC MDS, an Intake is defined as a point of contact between a client and a PHN-commissioned organisation where the client is assessed to determine the appropriate level of care and referred to a service provider to provide clinical care. An Intake may include the collection of an IAR-DST measure.</description>
    <label>Intake</label>
    <nameField>
        <label>Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>