force-app/main/default/objects/Intake__c/fields/client_consent__c.field-meta.xml
<CustomField>
    <fullName>client_consent__c</fullName>
    <description>An indication that the client has consented to their anonymised data being provided to the Department of Health for statistical purposes in planning and improving mental health services.</description>
    <label>Client Consent to Anonymised Data</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>