force-app/main/default/objects/Intake__c/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <description>This is a number or code assigned to each individual client referred to the intake organisation. The client identifier must be unique and stable for each individual within the intake organisation. Assigned by either the PHN or intake organisation depending on local procedures.</description>
    <label>Client Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>