force-app/main/default/objects/Intake__c/fields/Date_client_contacted_Intake__c.field-meta.xml
<CustomField>
    <fullName>Date_client_contacted_Intake__c</fullName>
    <description>The date on which the client first contacted the intake service</description>
    <label>Date client contacted Intake</label>
    <required>true</required>
    <type>Date</type>
</CustomField>