force-app/main/default/objects/Intake__c/fields/Date_referred_to_other_service_at_Intake__c.field-meta.xml
<CustomField>
    <fullName>Date_referred_to_other_service_at_Intake__c</fullName>
    <description>The date the client was referred to another organisation at Intake conclusion.</description>
    <label>Date referred to other service at Intake</label>
    <type>Date</type>
</CustomField>