force-app/main/default/objects/Intake__c/fields/Intake_Key__c.field-meta.xml
<CustomField>
    <fullName>Intake_Key__c</fullName>
    <description>This is a number or code assigned to each intake. The Intake Key is unique and stable for each intake at the level of the organisation.</description>
    <label>Intake Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>