force-app/main/default/objects/Intake__c/fields/Intake_Tags__c.field-meta.xml
<CustomField>
    <fullName>Intake_Tags__c</fullName>
    <description>List of tags for the intake.</description>
    <label>Intake Tags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>