force-app/main/default/objects/Intake__c/fields/Organisation_type_referred_to_at_Intake__c.field-meta.xml
<CustomField>
    <fullName>Organisation_type_referred_to_at_Intake__c</fullName>
    <label>Organisation type referred to at Intake</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	GP/Medical Practitioner</fullName>
            </value>
            <value>
                <fullName>2:	Hospital</fullName>
            </value>
            <value>
                <fullName>3:	Psychiatric/mental health service or facility</fullName>
            </value>
            <value>
                <fullName>4:	Alcohol and other drug treatment service</fullName>
            </value>
            <value>
                <fullName>5:	Other community/health care service</fullName>
            </value>
            <value>
                <fullName>6:	Correctional service</fullName>
            </value>
            <value>
                <fullName>7:	Police diversion</fullName>
            </value>
            <value>
                <fullName>8:	Court diversion</fullName>
            </value>
            <value>
                <fullName>9:	Legal service</fullName>
            </value>
            <value>
                <fullName>10:	Child protection agency</fullName>
            </value>
            <value>
                <fullName>11:	Community support groups/agencies</fullName>
            </value>
            <value>
                <fullName>12:	Centrelink or employment service</fullName>
            </value>
            <value>
                <fullName>13:	Housing and homelessness service</fullName>
            </value>
            <value>
                <fullName>14:	Telephone &amp; online services/referral agency e.g. direct line</fullName>
            </value>
            <value>
                <fullName>15:	Disability support service</fullName>
            </value>
            <value>
                <fullName>16:	Aged care facility/service</fullName>
            </value>
            <value>
                <fullName>17:	Immigration department or asylum seeker/refugee support service</fullName>
            </value>
            <value>
                <fullName>18:	School/other education or training institution</fullName>
            </value>
            <value>
                <fullName>19:	Community based Drug and Alcohol Service</fullName>
            </value>
            <value>
                <fullName>20:	Youth service (non-AOD)</fullName>
            </value>
            <value>
                <fullName>21:	Indigenous service (non-AOD)</fullName>
            </value>
            <value>
                <fullName>22:	Extended care/rehabilitation facility</fullName>
            </value>
            <value>
                <fullName>23:	Palliative care service</fullName>
            </value>
            <value>
                <fullName>24:	Police (not diversion)</fullName>
            </value>
            <value>
                <fullName>25:	Public dental provider - community dental agency</fullName>
            </value>
            <value>
                <fullName>26:	Dental Hospital</fullName>
            </value>
            <value>
                <fullName>27:	Private Dental Provider</fullName>
            </value>
            <value>
                <fullName>28:	Early childhood service</fullName>
            </value>
            <value>
                <fullName>29:	Maternal and Child Health Service</fullName>
            </value>
            <value>
                <fullName>30:	Community nursing service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>