force-app/main/default/objects/Intake__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Flexible Funding Pool</fullName>
            </value>
            <value>
                <fullName>2:	Head to Health</fullName>
            </value>
            <value>
                <fullName>3:	AMHC</fullName>
            </value>
            <value>
                <fullName>4:	Psychosocial</fullName>
            </value>
            <value>
                <fullName>5:	Bushfire Recovery 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>