force-app/main/default/objects/Intake__c/fields/Referred_to_Organisation_Path__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organisation_Path__c</fullName>
    <label>Referred to Organisation Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>